<resources>
    <string name="app_name">Teachers Club</string>
    <string name="developed_in_india_with">Developed in India with ❤️</string>
    <string name="splash_screen_logo">Splash Screen Logo</string>
    <string name="floating_button_for_next">Floating Button for Next</string>
    <string name="onboard_back">onboardBack</string>
    <string name="get_started">Get Started</string>
    <string name="finding_best_tuition_teachers_at_your_finger_tip">Find best tuition teachers sitting at your home. </string>
    <string name="you_will_get_courses_tutorials_as_well_as_notes_for_different_topics_all_under_the_same_roof">You will get courses, tutorials as well as notes for different topics all under the same roof.</string>
    <string name="you_can_ask_questions_24x7_and_get_them_answered_by_our_expert_teachers_within_an_hour">You can ask questions 24x7 and get them answered by our expert teachers within an hour.</string>
    <string name="skip">Skip</string>
    <string name="register_here">Register Here</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_a_member_login_here">Already a member? Login Here</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="i_agree_to_the_terms_conditions"><![CDATA[I agree to the Terms & Conditions]]></string>
    <string name="your_name">Your Name</string>
    <string name="email">Email</string>
    <string name="create_password">Create Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="enter_your_full_name">Enter your Full Name</string>
    <string name="enter_your_email">Enter your Email</string>
    <string name="create_a_strong_password">Create a strong password</string>
    <string name="confirm_your_password">Confirm your password</string>
    <string name="login_here">Login Here</string>
    <string name="enter_your_registered_email_id">Enter your registered email ID</string>
    <string name="password">Password</string>
    <string name="enter_your_password">Enter your Password</string>
    <string name="login">Login</string>
    <string name="new_here_register_yourself">New here? Register Yourself</string>
    <string name="decoration">Decoration</string>
    <string name="exit_to_main_activity">Exit to main activity</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="services">Services</string>
    <string name="notes">Notes</string>
    <string name="chatbot_for_queries">ChatBot for queries</string>
    <string name="setting_button_main_page">Setting Button Main Page</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="nav_drawer_image">Nav Drawer Image</string>
    <string name="find_teacher">Find Teacher</string>
    <string name="logout">Logout</string>
    <string name="about">About Us</string>
    <string name="privacy">Privacy Policy</string>
    <string name="version_1_0">Version 1.0</string>
    <string name="terms_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="courses">Courses</string>
    <string name="get_support">Get Support</string>
    <string name="view_more"><![CDATA[View More >>>]]></string>
    <string name="saurav_kumar">Saurav Kumar</string>
    <string name="official_skd_11_gmail_com">official.skd.11@gmail.com</string>
    <string name="basic_details">Basic Details</string>
    <string name="edit">Edit</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="_24">24</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="educational_details">Educational Details</string>
    <string name="school_college">School/College</string>
    <string name="gift_bhubaneswar">GIFT, Bhubaneswar</string>
    <string name="qualification">Qualification</string>
    <string name="b_tech">B. Tech</string>
    <string name="completed_pursuing">Completed/Pursuing</string>
    <string name="_2021">2021</string>
    <string name="specialisation">Specialisation</string>
    <string name="computer_science">Computer Science</string>
    <string name="support_back_button">Support Back Button</string>
    <string name="faq">FAQ</string>
    <string name="contact_us">Contact Us</string>
    <string name="enter_your_registered_email_address">Enter your registered email address</string>
    <string name="enter_your_mobile_number">Enter your mobile number</string>
    <string name="mobile_no">Mobile No.</string>
    <string name="message">Message</string>
    <string name="type_your_message_in_150_words">Type your message in 150 words</string>
    <string name="other_ways_to_reach_us">Other Ways To Reach Us</string>
    <string name="send">Send</string>
    <string name="mail_us_at_s_teachersclub_gmail_com">Mail Us At : s.teachersclub@gmail.com</string>
    <string name="call_us_at_0123456789">Call Us At : 0123456789</string>
    <string name="chat_with_brainstorm">Chat With BrainStorm</string>
    <string name="brainstorm">Brainstorm</string>
    <string name="button">Button</string>
    <string name="chat">chat</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="about_us_section">Welcome to Teachers Club!\n\nAt Teachers Club, we\'re committed to making education accessible and enjoyable for learners of all ages. Our mission is to connect students with experienced and dedicated tutors who are passionate about helping them achieve their learning goals.\n\nWhether you\'re a student seeking academic support, exam preparation, or skill enhancement, Teachers Club has you covered. Our platform brings together a diverse community of qualified tutors who excel in various subjects and fields. We understand that every learner is unique, so we provide a personalized and tailored learning experience to meet your individual needs.\n\nWhy Choose Teachers Club?\n\n - Quality Educators: Our tutors are experts in their respective fields, ensuring that you receive high-quality instruction and guidance.\n\n - Flexible Learning: Learn at your own pace and schedule. Our platform offers flexibility for both students and tutors.\n\n - Comprehensive Subjects: From mathematics to languages, science to arts, we offer a wide range of subjects to cater to all learning interests.\n\n - Interactive Sessions: Engage in interactive sessions that encourage active learning and knowledge retention.\n\n - Seamless Booking: Easily find and book tutors based on your preferences, availability, and learning objectives.\n\n - Feedback and Growth: Our platform encourages open communication between students and tutors, fostering continuous improvement and growth.\n\n\nJoin our community of learners and educators today and embark on a journey of knowledge, exploration, and achievement. Together, we\'re shaping a brighter future through education.\n\nFor any inquiries or assistance, feel free to reach out to our dedicated support team.\n\nThank you for choosing Teachers Club!</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="settings">Settings</string>
    <string name="general">General</string>
    <string name="setting_search">settingSearch</string>
    <string name="class_5">Class 5</string>
    <string name="class_6">Class 6</string>
    <string name="class_7">Class 7</string>
    <string name="class_8">Class 8</string>
    <string name="class_11">Class 11</string>
    <string name="class_12">Class 12</string>
    <string name="class_10">Class 10</string>
    <string name="class_9">Class 9</string>
    <string name="class_notes">Class Notes</string>
    <string name="competitive_paper_notes_and_question_banks">Additional Notes and Question Banks</string>
    <string name="computer">Computer</string>
    <string name="jee">JEE</string>
    <string name="programming">Programming</string>
    <string name="gen_science">Gen Science</string>
    <string name="gen_studies">Gen Studies</string>
    <string name="english">English</string>
    <string name="back">Back</string>
    <string name="profile_pic">Profile Pic</string>
    <string name="edit_basic_details">Edit Basic Details</string>
    <string name="saved_addresses">Saved Addresses</string>
    <string name="payment_details">Payment Details</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="favourites">Favourites</string>
    <string name="okay">Okay</string>
    <string name="coming_soon_image">Coming Soon Image</string>
    <string name="search_courses">Search Courses</string>
    <string name="app_id">ca-app-pub-4040977291751617~4203765742</string>
    <string name="ad_unit_id_notes">ca-app-pub-4040977291751617/5552605464</string>
    <string name="ad_unit_id_about_us">ca-app-pub-4040977291751617/9986512791</string>
    <string name="ad_unit_id_courses">ca-app-pub-4040977291751617/2177758237</string>
    <string name="ad_unit_id_notification">ca-app-pub-4040977291751617/4106304614</string>
    <string name="ad_unit_id_profile">ca-app-pub-4040977291751617/9990591657</string>
    <string name="free_course">Free Course</string>
    <string name="reading">Reading</string>
    <string name="videos">Video</string>
    <string name="audio">Audio</string>
    <string name="view_all">View All</string>
    <string name="planguageimage">PLanguageImage</string>
    <string name="c_language">C Language</string>
    <string name="c_plus_language">C ++ Language</string>
    <string name="python">Python</string>
    <string name="html">HTML</string>
    <string name="read_the_best_material_on_c_programming_language">Read the best material on C Programming language.</string>
    <string name="arrow">Arrow</string>
    <string name="want_to_know_about_c">Want to know about C++.</string>
    <string name="learn_one_of_the_most_interesting_programming_language">Learn one of the most interesting Programming Language</string>
    <string name="get_into_the_world_of_web_development">Get into the world of Web Development.</string>
    <string name="general_science">General Science</string>
    <string name="physics">Physics</string>
    <string name="chemistry">Chemistry</string>
    <string name="novel">Novel</string>
    <string name="atomic_habits">Atomic Habits</string>
    <string name="psychology_of_money">Psychology of Money</string>
    <string name="image_placeholder">Image Placeholder</string>
    <string name="teacher_1">Teacher 1</string>
    <string name="search_here">Search Here</string>
    <string name="notification">Notification</string>
    <string name="available_teachers">Available Teachers</string>
    <string name="classroom_caf">Classroom Café</string>
    <string name="create">Create</string>
    <string name="post">Post</string>
    <string name="question">Question</string>
    <string name="post_content">Post Content</string>
    <string name="post_questions">Post Questions</string>
</resources>