<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/home"
        android:title="@string/home" />

    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/profile"
        android:title="@string/profile" />

    <item
        android:id="@+id/nav_find_teacher"
        android:icon="@drawable/find"
        android:title="@string/find_teacher" />

    <item
        android:id="@+id/nav_services"
        android:icon="@drawable/services"
        android:title="@string/services" />

    <item
        android:id="@+id/nav_notes"
        android:icon="@drawable/notes"
        android:title="@string/notes" />

    <item
        android:id="@+id/nav_logout"
        android:icon="@drawable/logout"
        android:title="@string/logout" />

</menu>