<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_secondary"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/bg_line_login"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:contentDescription="@string/decoration"
        android:elevation="3dp"
        android:src="@drawable/on_board_back2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/login_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:elevation="3dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/login_here"
        android:textColor="@color/color_text"
        android:textSize="32sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/exit_reg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/exit_to_main_activity"
        android:elevation="3dp"
        android:src="@drawable/exit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/email_tv_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="64dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/email"
        android:textColor="@color/color_text"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bg_line_login" />

    <EditText
        android:id="@+id/email_et_login"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/et_custom"
        android:elevation="3dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:hint="@string/enter_your_registered_email_id"
        android:inputType="textEmailAddress"
        android:padding="4dp"
        android:textColor="@color/color_text"
        android:textColorHint="@color/color_text_lite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email_tv_login" />

    <TextView
        android:id="@+id/pass_tv_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/password"
        android:textColor="@color/color_text"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email_et_login" />

    <EditText
        android:id="@+id/pass_et_login"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:autofillHints="password"
        android:background="@drawable/et_custom"
        android:elevation="3dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:hint="@string/enter_your_password"
        android:inputType="textPassword"
        android:padding="4dp"
        android:textColor="@color/color_text"
        android:textColorHint="@color/color_text_lite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pass_tv_login" />

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/consent_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:theme="@style/MyCheckBox"
        app:layout_constraintStart_toStartOf="@id/pass_et_login"
        app:layout_constraintTop_toBottomOf="@id/pass_et_login" />

    <TextView
        android:id="@+id/consent_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/i_agree_to_the_terms_conditions"
        android:textColor="@color/color_primary"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="@id/consent_check"
        app:layout_constraintStart_toEndOf="@id/consent_check"
        app:layout_constraintTop_toTopOf="@id/consent_check" />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:backgroundTint="@color/color_primary"
        android:elevation="3dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:onClick="onClick"
        android:text="@string/login"
        android:textColor="@color/gray"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/consent_text" />

    <TextView
        android:id="@+id/new_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:onClick="onClick"
        android:text="@string/new_here_register_yourself"
        android:textColor="@color/color_primary"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="@id/login_btn"
        app:layout_constraintStart_toStartOf="@id/login_btn"
        app:layout_constraintTop_toBottomOf="@id/login_btn" />

</androidx.constraintlayout.widget.ConstraintLayout>