<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_secondary"
    tools:context=".CommunityActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/communityToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_primary"
        android:elevation="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/community_back_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/chat"
            android:src="@drawable/back"
            app:tint="@color/color_secondary" />

        <TextView
            android:id="@+id/communityToolbarTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/classroom_caf"
            android:textColor="@color/color_secondary"
            android:textSize="24sp"
            android:textStyle="bold" />

    </androidx.appcompat.widget.Toolbar>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bot_nav_bg"
        android:elevation="3dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_nav_menu" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/mainFAB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/color_primary"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/create"
        android:textColor="@color/color_secondary"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/bottom_navigation"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/create_post_FAB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@color/color_primary"
        android:contentDescription="@string/post_content"
        android:src="@drawable/create"
        app:fabSize="normal"
        app:layout_constraintBottom_toTopOf="@id/mainFAB"
        app:layout_constraintStart_toStartOf="@id/mainFAB" />

    <TextView
        android:id="@+id/create_post_TV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/post"
        android:textColor="@color/color_primary"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/create_post_FAB"
        app:layout_constraintStart_toEndOf="@id/create_post_FAB"
        app:layout_constraintTop_toTopOf="@id/create_post_FAB" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/ask_question_FAB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@color/color_primary"
        android:contentDescription="@string/post_questions"
        android:src="@drawable/question"
        app:fabSize="normal"
        app:layout_constraintBottom_toTopOf="@id/create_post_FAB"
        app:layout_constraintStart_toStartOf="@id/create_post_FAB" />

    <TextView
        android:id="@+id/create_question_TV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/question"
        android:textColor="@color/color_primary"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/ask_question_FAB"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/ask_question_FAB"
        app:layout_constraintTop_toTopOf="@id/ask_question_FAB" />

</androidx.constraintlayout.widget.ConstraintLayout>